feat(platform#91): async ACL API — CompletionStage returns for AccessControlProvider
Migrate AccessControlProvider SPI from synchronous to asynchronous:
- canAccess() returns CompletionStage<Boolean>
- grant/revoke/revokeAll/registerParent return CompletionStage<Void>
- accessibleResources() returns CompletionStage<List<String>>
Update InMemoryAccessControlProvider, JpaAccessControlProvider, contract tests,
and Flyway migration to match.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>